Script Written for Scratch Assay in Python

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
@@ -6,6 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "    This script is for manual sratch assay with only image sets from two different times.\n",
+    "    The first set is obviously from time zero. The second set should be from the end of the experiment.\n",
+    "    Each image set should be in a different folder. The the address of each folder should be given to the functions,\n",
+    "    not the images themselvs.\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# import necessary libraries\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -16,40 +31,6 @@
     "from skimage.morphology import disk\n",
     "from skimage import io\n",
     "from skimage.filters import threshold_otsu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def starting_time(path):\n",
-    "    \"\"\"\n",
-    "    Measures the gap areas in all the images in a folder\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    path: path of the folder containing the images from time 0.\n",
-    "    \n",
-    "    Returns\n",
-    "    ----------\n",
-    "    A list containing the gap areas of the images in order.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    time = 0\n",
-    "    time_0 = []\n",
-    "\n",
-    "    for file in glob.glob(path):\n",
-    "    \n",
-    "        img = io.imread(file, as_gray = True)\n",
-    "        entropy_img = entropy(img, disk(10))\n",
-    "        thresh = threshold_otsu(entropy_img)\n",
-    "        binary = entropy_img <= thresh\n",
-    "        time_0.append(np.sum(binary == 1))\n",
-    "        time += 1\n",
-    "        \n",
-    "    return time_0"
    ]
   }
  ],
