Script Written for Scratch Assay in Python

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
@@ -32,6 +32,29 @@
     "from skimage import io\n",
     "from skimage.filters import threshold_otsu"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_sets(path):\n",
+    "    \"\"\"\n",
+    "    Reads all the images in a folder as grey images.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    path: The address of the folder containing all the image. It mush have '/' \n",
+    "    in the end of it.\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A list of all images read in grey scale \n",
+    "        \n",
+    "    \"\"\"\n",
+    "    return [io.imread(file, as_gray = True) for file in glob.glob(path + \"*\")]"
+   ]
   }
  ],
  "metadata": {
