Scripts Written for Scratch Assay in Python

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
@@ -55,6 +55,29 @@
     "    \"\"\"\n",
     "    return [io.imread(file, as_gray = True) for file in glob.glob(path + \"*\")]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def entropy_img(images):\n",
+    "    \"\"\"\n",
+    "    Reads all the images in a list and labels the areas with lower entropy.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    images: The list of images read in grey scale provided by \n",
+    "    the image_sets function.\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A list of all images with theor areas of low entropy labeled.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return [entropy(img, disk(10)) for img in images] "
+   ]
   }
  ],
  "metadata": {
