Script Written for Manual Scratch Assay with Python (Functional)

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
@@ -78,6 +78,29 @@
     "    \n",
     "    return [entropy(img, disk(10)) for img in images] "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def threshold(entropy_images):\n",
+    "    \"\"\"\n",
+    "    Reads all the images from a list and threshold them.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    entropy_images: The list of images labeled by entropy function provided\n",
+    "    by the entropy_img function.\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A list of thresholded images.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return [threshold_otsu(ent_img) for ent_img in entropy_images]"
+   ]
   }
  ],
  "metadata": {
