Script Written for Manual Scratch Assay with Python (Functional)

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
@@ -101,6 +101,30 @@
     "    \n",
     "    return [threshold_otsu(ent_img) for ent_img in entropy_images]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gap_area(thresh_img, entropy_images):\n",
+    "    \"\"\"\n",
+    "    Measures the gap areas in a list of images.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    thresh_img: List of thresholded images provided by threshold function.\n",
+    "    entropy_images: List of images labeled by entropy function provided \n",
+    "                    by entropy_img function.\n",
+    "                    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A list containing the gap areas in pixels\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return [np.sum((ent <= thr) == 1) for ent, thr in zip(entropy_images, thresh_img)]"
+   ]
   }
  ],
  "metadata": {
