Script Written for Manual Scratch Assay with Python (Functional)

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
@@ -125,6 +125,31 @@
     "    \n",
     "    return [np.sum((ent <= thr) == 1) for ent, thr in zip(entropy_images, thresh_img)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gap_diff(time_first, time_last, concs):\n",
+    "    \"\"\"\n",
+    "    Measures difference of gap areas bewteen time first (time 0) and time last.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    time_first: List containing the gap areas of the images in time first (time 0).\n",
+    "    time_last: List containing the gap areas of the images in the time last.\n",
+    "    concs: List containing the concentrations used in the experiment.\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A dictionary whose keys are the concentraions and valuse are the difference between\n",
+    "    the gap areas between time first (time 0) and time last.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return {x: abs(y - z) for x, y, z in zip(concs, time_first, time_last)}"
+   ]
   }
  ],
  "metadata": {
