Script Written for Manual Scratch Assay with Python (Functional)

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
@@ -150,6 +150,34 @@
     "    \n",
     "    return {x: abs(y - z) for x, y, z in zip(concs, time_first, time_last)}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dot_plot(diff_dict, title, file_name):\n",
+    "    \"\"\"\n",
+    "    Plot a dot plot from dictionary\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    diff_dict: Dictionary provdided by gap_diff function\n",
+    "    title: Title for the plot\n",
+    "    file_name: Name for saving the file. By default the format is png. \n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A plot whose y axis values are the values of the dictionary and x axis values are the values\n",
+    "    othe the dictionary.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    normalized = [((num - min(diff_dict.values())) / (max(diff_dict.values()) - min(diff_dict.values())) + 1) for num in diff_dict.values()]\n",
+    "    plt.plot(diff_dict.keys(), normalized, \"bo\")\n",
+    "    plt.title(title)\n",
+    "    return plt.savefig(file_name)"
+   ]
   }
  ],
  "metadata": {
