Script Written for Manual Assay with Python (Functional)

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
@@ -178,6 +178,32 @@
     "    plt.title(title)\n",
     "    return plt.savefig(file_name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bar_plot(diff_dict, title, file_name):\n",
+    "    \"\"\"\n",
+    "    Plot a bar plot from dictionary\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    diff_dict: Dictionary provdided by gap_diff function\n",
+    "    title: Title for the plot\n",
+    "    file_name: Name for saving the file. By default the format is png. \n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A plot whose y axis values are the values of the dictionary and x axis values are the values\n",
+    "    othe the dictionary.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    plot = pd.Series(diff_dict.values(), index = diff_dict.keys()).plot(kind = \"bar\", yerr = np.std([*diff_dict.values()]), title = title, rot = 0).get_figure()\n",
+    "    return plot.savefig(file_name)"
+   ]
   }
  ],
  "metadata": {
