Script Written for Manual Scratch Assay with Pytho (OOP)

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
@@ -17,6 +17,23 @@
     "import pandas as pd\n",
     "import glob"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ManualScratchAssay():\n",
+    "    \n",
+    "    TIME0 = []\n",
+    "    TIMELATER = []\n",
+    "    \n",
+    "    def __init__(self, time_0, time_late, concs):\n",
+    "        self.time_0 = time_0\n",
+    "        self.time_late = time_late\n",
+    "        self.concs = concs"
+   ]
   }
  ],
  "metadata": {
