Script Written for Manual Scratch Assay with Python (OOP)

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
@@ -32,7 +32,21 @@
     "    def __init__(self, time_0, time_late, concs):\n",
     "        self.time_0 = time_0\n",
     "        self.time_late = time_late\n",
-    "        self.concs = concs"
+    "        self.concs = concs\n",
+    "        \n",
+    "        \n",
+    "    def read_img(self, start = False, end = False):\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "        \n",
+    "        if self.start == True:\n",
+    "            return [io.imread(file, as_gray = True) for file in glob.glob(self.time_0 + \"*\")]\n",
+    "                \n",
+    "        elif self.end == True:\n",
+    "            return [io.imread(file, as_gray = True) for file in glob.glob(self.time_late + \"*\")]\n",
+    "                \n",
+    "        else:\n",
+    "            raise Exception(\"One of the arguments should be true while the other is false.\")"
    ]
   }
  ],
