--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
@@ -46,6 +46,19 @@
     "            return [io.imread(file, as_gray = True) for file in glob.glob(self.time_late + \"*\")]\n",
     "                \n",
     "        else:\n",
+    "            raise Exception(\"One of the arguments should be true while the other is false.\")\n",
+    "            \n",
+    "    def entropy_img(self, start = False, end = False):\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "        \n",
+    "        if self.start == True:\n",
+    "            return [entropy(img, disk(10)) for img in self.read_img(start = True)]\n",
+    "        \n",
+    "        elif self.end == True:\n",
+    "            return [entropy(img, disk(10)) for img in self.read_img(end = True)]\n",
+    "        \n",
+    "        else:\n",
     "            raise Exception(\"One of the arguments should be true while the other is false.\")"
    ]
   }
