Script Written for Manual Scratch Assay with Python (OOP)

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
@@ -72,6 +72,19 @@
     "            return [entropy(img, disk(10)) for img in self.read_img(end = True)]\n",
     "        \n",
     "        else:\n",
+    "            raise Exception(\"One of the arguments should be true while the other is false.\")\n",
+    "            \n",
+    "    def threshold(self, start = False, end = False):\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "        \n",
+    "        if self.start == True:\n",
+    "            return [threshold_otsu(ent_img) for ent_img in self.entropy_img(start = True)]\n",
+    "        \n",
+    "        elif self.end == True:\n",
+    "            return [threshold_otsu(ent_img) for ent_img in self.entropy_img(end = True)]\n",
+    "        \n",
+    "        else:\n",
     "            raise Exception(\"One of the arguments should be true while the other is false.\")"
    ]
   }
