Script Written for Manual Scratch Assay with Python (OOP)

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
@@ -85,6 +85,19 @@
     "            return [threshold_otsu(ent_img) for ent_img in self.entropy_img(end = True)]\n",
     "        \n",
     "        else:\n",
+    "            raise Exception(\"One of the arguments should be true while the other is false.\")\n",
+    "            \n",
+    "    def gap_area(self, start = False, end = False):\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "        \n",
+    "        if self.start == True:\n",
+    "            return [np.sum((ent <= thr) == 1) for ent, thr in zip(self.entropy_img(start = True), self.threshold(start = True))]\n",
+    "        \n",
+    "        elif self.end == True:\n",
+    "            return [np.sum((ent <= thr) == 1) for ent, thr in zip(self.entropy_img(end = True), self.threshold(end = True))]\n",
+    "        \n",
+    "        else:\n",
     "            raise Exception(\"One of the arguments should be true while the other is false.\")"
    ]
   }
