Script Written for Manual Scratch Assay with Python (OOP)

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
@@ -98,7 +98,10 @@
     "            return [np.sum((ent <= thr) == 1) for ent, thr in zip(self.entropy_img(end = True), self.threshold(end = True))]\n",
     "        \n",
     "        else:\n",
-    "            raise Exception(\"One of the arguments should be true while the other is false.\")"
+    "            raise Exception(\"One of the arguments should be true while the other is false.\")\n",
+    "            \n",
+    "    def gap_diff(self):\n",
+    "        return {x: abs(y - z) for x, y, z in zip(self.concs, self.gap_area(start = True), self.time_last(end = True))}"
    ]
   }
  ],
