Script Written for Manual Scratch Assay with Python (Functional)

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
@@ -53,7 +53,7 @@
     "    A list of all images read in grey scale \n",
     "        \n",
     "    \"\"\"\n",
-    "    return [io.imread(file, as_gray = True) for file in glob.glob(path + \"*\")]"
+    "    return [io.imread(file, as_gray = True) for file in glob.glob(path + \"*.*\")]"
    ]
   },
   {
