Script Wriiten for Manual Scratch Assay with Python (OOP)

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
@@ -101,7 +101,16 @@
     "            raise Exception(\"One of the arguments should be true while the other is false.\")\n",
     "            \n",
     "    def gap_diff(self):\n",
-    "        return {x: abs(y - z) for x, y, z in zip(self.concs, self.gap_area(start = True), self.time_last(end = True))}"
+    "        return {x: abs(y - z) for x, y, z in zip(self.concs, self.gap_area(start = True), self.time_last(end = True))}\n",
+    "    \n",
+    "    def dot_plot(self, title, file_name):\n",
+    "        self.title = title\n",
+    "        self.file_name = file_name\n",
+    "\n",
+    "        normalized = [((num - min(self.gap_diff().values())) / (max(self.gap_diff().values()) - min(self.gap_diff().values())) + 1) for num in self.gap_diff().values()]\n",
+    "        plt.plot(self.gap_diff().keys(), normalized, \"bo\")\n",
+    "        plt.title(self.title)\n",
+    "        return plt.savefig(self.file_name)"
    ]
   }
  ],
