Script Written for Manual Scratch Assay with Python (OOP)

--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay_OOP.ipynb
@@ -110,7 +110,14 @@
     "        normalized = [((num - min(self.gap_diff().values())) / (max(self.gap_diff().values()) - min(self.gap_diff().values())) + 1) for num in self.gap_diff().values()]\n",
     "        plt.plot(self.gap_diff().keys(), normalized, \"bo\")\n",
     "        plt.title(self.title)\n",
-    "        return plt.savefig(self.file_name)"
+    "        return plt.savefig(self.file_name)\n",
+    "    \n",
+    "    def bar_plot(self, title, file_name):\n",
+    "        self.title = title\n",
+    "        self.file_name = file_name\n",
+    "    \n",
+    "        plot = pd.Series(self.gap_diff().values(), index = self.gap_diff().keys()).plot(kind = \"bar\", yerr = np.std([*self.gap_diff().values()]), title = self.title, rot = 0).get_figure()\n",
+    "        return plot.savefig(self.file_name)"
    ]
   }
  ],
