Script Written for Automated Scratch Assay with Python

--- a/Scratch Assay/Automated Scratch Assay/AutomatedScratchAssay.ipynb
+++ b/Scratch Assay/Automated Scratch Assay/AutomatedScratchAssay.ipynb
@@ -20,6 +20,41 @@
     "from skimage import io\n",
     "from skimage.filters import threshold_otsu"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def img_reading(path):\n",
+    "    \"\"\"\n",
+    "    Reads images in several folders in a directory, thresholds them and applies entropy.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    conc: string, concentration used for the images\n",
+    "    path: string, path to the directory where all the folder containing images are saved\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A dictionary whose key is the concentration and values are the measured gaps of the images\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    final = {}\n",
+    "    for folders in os.listdir(path):\n",
+    "        measures = []\n",
+    "        for imgs in glob.glob(path + folders + \"/*.*\"):\n",
+    "            img = io.imread(imgs, as_gray = True)\n",
+    "            entropy_img = entropy(img, disk(10))\n",
+    "            thresh = threshold_otsu(entropy_img)\n",
+    "            binary = entropy_img <= thresh\n",
+    "            measures.append(np.sum(binary == 1))\n",
+    "            \n",
+    "        final[folders] = measures\n",
+    "        \n",
+    "    return final"
+   ]
   }
  ],
  "metadata": {
