Script Written for Automated Scratch Assay with Python

--- a/Scratch Assay/Automated Scratch Assay/AutomatedScratchAssay.ipynb
+++ b/Scratch Assay/Automated Scratch Assay/AutomatedScratchAssay.ipynb
@@ -55,6 +55,43 @@
     "        \n",
     "    return final"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def file_conversion(conc, measurements, file_name):\n",
+    "    \"\"\"\n",
+    "    Saves the measrued data into a text and csv files.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    conc: string, concentration of used on the images\n",
+    "    measureements: dict, provided by img_reading function\n",
+    "    file_name: string, name of the saved file\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    Text and csv files in the directory\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    file = open(file_name + \".txt\", \"a\")\n",
+    "    file.write(conc)\n",
+    "    file.write(\":\\n\")\n",
+    "    for k1, v1 in measurements.items():\n",
+    "        file.write(k1)\n",
+    "        file.write(\":\")\n",
+    "        file.write(str(v1))\n",
+    "        file.write(\"\\n\")\n",
+    "        \n",
+    "    file.write(\"\\n\\n\")\n",
+    "    file.close()\n",
+    "    \n",
+    "    df = pd.DataFrame({conc: measurements})\n",
+    "    df.to_csv(file_name + \".csv\", mode = \"a\")"
+   ]
   }
  ],
  "metadata": {
