Script Written for Automated Scratch Assay with Python

--- a/Scratch Assay/Automated Scratch Assay/AutomatedScratchAssay.ipynb
+++ b/Scratch Assay/Automated Scratch Assay/AutomatedScratchAssay.ipynb
@@ -92,6 +92,47 @@
     "    df = pd.DataFrame({conc: measurements})\n",
     "    df.to_csv(file_name + \".csv\", mode = \"a\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def df_reading(csv_file):\n",
+    "    \"\"\"\n",
+    "    Reads the csv file saved and returns a dictionary whose keys are the concentrations of the experiements and\n",
+    "    values are the measured gap areas of each image.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    csv_file: csv, csv file created by file_conversion function\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A dictionary\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    df = pd.read_csv(file)\n",
+    "    df = df.rename(columns = {\"Unnamed: 0\": \"Wells\"})\n",
+    "    df = df.set_index(\"Wells\")\n",
+    "    measures = {}\n",
+    "    \n",
+    "    for col in df.columns:\n",
+    "        for k, v in df[col].to_dict().items():\n",
+    "            if str(v) == \"nan\":\n",
+    "                continue\n",
+    "\n",
+    "            elif col not in measures:\n",
+    "                cv = list(map(int, v.strip(\"][\").split(\", \")))\n",
+    "                measures[col] = np.array(cv)\n",
+    "\n",
+    "            else:\n",
+    "                cv = list(map(int, v.strip(\"][\").split(\", \")))\n",
+    "                measures[col] = np.vstack((measures[col] , np.array(cv)))\n",
+    "                \n",
+    "    return measures"
+   ]
   }
  ],
  "metadata": {
