Script Written for Automated Scratch Assay with Python

--- a/Scratch Assay/Automated Scratch Assay/AutomatedScratchAssay.ipynb
+++ b/Scratch Assay/Automated Scratch Assay/AutomatedScratchAssay.ipynb
@@ -133,6 +133,41 @@
     "                \n",
     "    return measures"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def slope_measurements(measurements_dicts):\n",
+    "    \"\"\"\n",
+    "    Measures the slope of a line between two dtaa points\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    measurements_dicts: dictionary, provided by df_reading function\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A dictionary whose keys are the same as measurements dicts and values are the slopes of the lines\n",
+    "    \"\"\"\n",
+    "    end = 2\n",
+    "    slope_dict = {}\n",
+    "\n",
+    "    for k, v in shortened_dict.items():\n",
+    "        for start in range(0, len(v) - 1):\n",
+    "            if k not in slope_dict:\n",
+    "                slope_dict[k] = [0, stats.linregress([0, 1], v[start: end])[0]]\n",
+    "                end += 1\n",
+    "                \n",
+    "            else:\n",
+    "                slope_dict[k].append(stats.linregress([0, 1], v[start: end])[0])\n",
+    "                end += 1\n",
+    "        end = 2\n",
+    "        \n",
+    "    return slope_dict"
+   ]
   }
  ],
  "metadata": {
