Script Written for Automated Scrtach Assay with Python

--- a/Scratch Assay/Automated Scratch Assay/AutomatedScratchAssay.ipynb
+++ b/Scratch Assay/Automated Scratch Assay/AutomatedScratchAssay.ipynb
@@ -168,6 +168,40 @@
     "        \n",
     "    return slope_dict"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def slope_visualazation(slopes, time, x_label, y_label, title, file_name):\n",
+    "    \"\"\"\n",
+    "    Graphs the slopes of the lines\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    slopes: dictionary, provided by slope_measurements functions\n",
+    "    time: list, use list(range(starting_time, ending_time + 1)) to create the time that will be used on x axis\n",
+    "    x_label: string, label for x axis\n",
+    "    y_label: string, label for y axis\n",
+    "    title: string, title of the figure\n",
+    "    file_name: string, used to save the file with\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    A png file in the directory\n",
+    "    \"\"\"\n",
+    "    plt.figure(figsize = (10, 7))\n",
+    "    for k, v in slopes.items():\n",
+    "        plt.plot(time, v, label = k)\n",
+    "    \n",
+    "    plt.xlabel(x_label)\n",
+    "    plt.ylabel(y_label)\n",
+    "    plt.legend(loc = \"upper right\", bbox_to_anchor = (1.15, 1.01))\n",
+    "    plt.title(title)\n",
+    "    plt.savefig(file_name)"
+   ]
   }
  ],
  "metadata": {
