--- a/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
+++ b/Scratch Assay/Manual Scratch Assay/ManualScratchAssay.ipynb
@@ -9,7 +9,7 @@
     "\"\"\"\n",
     "    This script is for manual sratch assay with only image sets from two different times.\n",
     "    The first set is obviously from time zero. The second set should be from the end of the experiment.\n",
-    "    Each image set should be in a different folder. The the address of each folder should be given to the functions,\n",
+    "    Each image set should be in a different folder. The address of each folder should be given to the functions,\n",
     "    not the images themselvs.\n",
     "\n",
     "\"\"\""
